--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ Source code file for G-Code generation, simulation, and visualization
 ibrary.
 
 Copyright (C) 2006 - 2010 by Justin Shumaker
-Copyright (C) 2014 by Asztalos Attila Oszkár
+Copyright (C) 2014 - 2020 by Asztalos Attila Oszkár
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
